# pytest-routes

./: .gitignore  CONTRIBUTING.md  Makefile  PLAN.md  QUERY_PARAMS_IMPLEMENTATION.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml  docs.yml  pages-deploy.yml  pr-title.yml  publish.yml
docs/: changelog.md  conf.py  getting-started.md  index.md
docs/api/: config.rst  discovery.rst  execution.rst  generation.rst  index.rst  integrations.rst  reporting.rst  validation.rst
docs/usage/: authentication.md  cli-options.md  configuration.md  index.md  reports.md  schemathesis.md  stateful.md
docs/usage/frameworks/: fastapi.md  index.md  litestar.md  openapi.md  starlette.md
examples/: __init__.py  custom_strategies.py  example_pyproject.toml  fastapi_app.py  litestar_app.py  starlette_app.py
pr-preview/pr-3/: .buildinfo  changelog.html  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
pr-preview/pr-3/.doctrees/: changelog.doctree  getting-started.doctree  index.doctree
pr-preview/pr-3/.doctrees/api/: config.doctree  discovery.doctree  execution.doctree  generation.doctree  index.doctree  integrations.doctree  reporting.doctree  validation.doctree
pr-preview/pr-3/.doctrees/usage/: authentication.doctree  cli-options.doctree  configuration.doctree  index.doctree  reports.doctree  schemathesis.doctree  stateful.doctree  websocket.doctree
pr-preview/pr-3/.doctrees/usage/frameworks/: fastapi.doctree  index.doctree  litestar.doctree  openapi.doctree  starlette.doctree
pr-preview/pr-3/_modules/: index.html
pr-preview/pr-3/_modules/pytest_routes/: config.html  discovery.html  plugin.html
pr-preview/pr-3/_modules/pytest_routes/discovery/: base.html  litestar.html  openapi.html  starlette.html
pr-preview/pr-3/_modules/pytest_routes/execution/: client.html  runner.html
pr-preview/pr-3/_modules/pytest_routes/generation/: body.html  headers.html  path.html  strategies.html
pr-preview/pr-3/_modules/pytest_routes/integrations/: schemathesis.html
pr-preview/pr-3/_modules/pytest_routes/reporting/: html.html  metrics.html  route_coverage.html
pr-preview/pr-3/_modules/pytest_routes/validation/: response.html
pr-preview/pr-3/_sources/api/: discovery.rst.txt  execution.rst.txt  generation.rst.txt  index.rst.txt  validation.rst.txt
pr-preview/pr-3/_sources/usage/: configuration.md.txt  websocket.md.txt
pr-preview/pr-3/_sources/usage/frameworks/: fastapi.md.txt  openapi.md.txt  starlette.md.txt
pr-preview/pr-3/_static/: custom.css
pr-preview/pr-3/api/: config.html  discovery.html  execution.html  generation.html  index.html  integrations.html  reporting.html  validation.html
pr-preview/pr-3/usage/: authentication.html  cli-options.html  configuration.html  index.html  reports.html  schemathesis.html  stateful.html  websocket.html
pr-preview/pr-3/usage/frameworks/: fastapi.html  index.html  litestar.html  openapi.html  starlette.html
scripts/: debug_phase2.py
src/pytest_routes/: __init__.py  config.py  plugin.py
src/pytest_routes/auth/: __init__.py  providers.py
src/pytest_routes/discovery/: __init__.py  base.py  litestar.py  openapi.py  starlette.py
src/pytest_routes/execution/: __init__.py  client.py  runner.py
src/pytest_routes/generation/: __init__.py  body.py  headers.py  path.py  strategies.py
src/pytest_routes/integrations/: __init__.py  schemathesis.py
src/pytest_routes/reporting/: __init__.py  html.py  metrics.py  route_coverage.py
src/pytest_routes/stateful/: __init__.py  config.py  plugin.py  runner.py  state_machine.py
src/pytest_routes/validation/: __init__.py  response.py
src/pytest_routes/websocket/: __init__.py  client.py  config.py  runner.py  strategies.py
tests/: __init__.py  conftest.py  test_auth.py  test_client.py  test_config.py  test_discovery.py  test_headers.py  test_integration.py  test_openapi_body_extraction.py  test_plugin.py  test_query_params.py  test_reporting.py  test_runner.py  test_schemathesis_integration.py  test_stateful.py  test_strategies.py  test_websocket.py  test_websocket_discovery.py
tests/validation/: __init__.py  test_integration.py  test_response.py
